[gd_scene format=3 uid="uid://dac2v2br3grnx"]

[ext_resource type="Script" uid="uid://b7opyer1dxfp7" path="res://Scripts/Characters/Berserker/berserker.gd" id="1_2i22b"]
[ext_resource type="PackedScene" uid="uid://c12ekuq1diigx" path="res://Scenes/UI/Player/PlayerBuffs/player_buffs.tscn" id="2_akq4v"]
[ext_resource type="PackedScene" uid="uid://c6bd4r2gdjyww" path="res://Scenes/UI/Player/PlayerDebuffs/player_debuffs.tscn" id="2_lkafq"]
[ext_resource type="PackedScene" uid="uid://c6q0n1yria3h1" path="res://Scenes/UI/Player/PlayerConsumables/player_consumables.tscn" id="2_svm5r"]
[ext_resource type="Texture2D" uid="uid://gb3vedweny2f" path="res://Resources/Art/UIElements/rage_bar_under.png" id="3_mcllw"]
[ext_resource type="PackedScene" uid="uid://btucvus7fb5ei" path="res://Scenes/UI/Player/PlayerSkills/player_skills.tscn" id="3_ruasw"]
[ext_resource type="Texture2D" uid="uid://cm8or4yet6qac" path="res://Resources/Art/UIElements/rage_bar.png" id="3_svegv"]
[ext_resource type="PackedScene" uid="uid://cmqdatbi63mr7" path="res://Scenes/UI/Player/PlayerRunes/player_runes.tscn" id="4_p0pnd"]
[ext_resource type="Texture2D" uid="uid://dxfpkx4alkxkg" path="res://Resources/Art/Classes/berserker.png" id="4_xoway"]
[ext_resource type="Texture2D" uid="uid://cxmblkhdw7e8x" path="res://Resources/UI/health_bar.png" id="6_i2nsu"]
[ext_resource type="Texture2D" uid="uid://dt0ya4xvwf842" path="res://Resources/UI/health_bar_under.png" id="6_tlmij"]
[ext_resource type="Texture2D" uid="uid://bg17x4moack4" path="res://Resources/UI/health_bar_border.png" id="7_d0ter"]
[ext_resource type="PackedScene" uid="uid://cbuylixaxf1p6" path="res://Scenes/UI/Player/player_interrupts.tscn" id="7_ruoki"]
[ext_resource type="PackedScene" uid="uid://cn7bmmty2rmay" path="res://Scenes/UI/Player/player_gadgets.tscn" id="8_flvq4"]
[ext_resource type="Texture2D" uid="uid://c5v1kq45qxngx" path="res://Resources/Art/UIElements/block_symbol.png" id="9_vfrul"]
[ext_resource type="PackedScene" uid="uid://beq5hrbn5bvp6" path="res://Scenes/UI/Player/items_ui.tscn" id="14_wm4uu"]
[ext_resource type="Texture2D" uid="uid://civ7nytitgvth" path="res://Resources/UI/stagger_bar.png" id="15_6s682"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qj8m8"]
size = Vector2(98, 128)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8k3g5"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.489622, 0.489622, 0.489622, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pttw3"]
bg_color = Color(0.6, 0.6, 0.6, 0.615686)

[node name="Berserker" type="Node2D" unique_id=423685648 groups=["character"]]
script = ExtResource("1_2i22b")

[node name="PlayerDebuffs" parent="." unique_id=1134381130 instance=ExtResource("2_lkafq")]

[node name="PlayerBuffs" parent="." unique_id=2042762000 instance=ExtResource("2_akq4v")]

[node name="PlayerConsumables" parent="." unique_id=1787368643 instance=ExtResource("2_svm5r")]

[node name="PlayerSkills" parent="." unique_id=78266357 instance=ExtResource("3_ruasw")]

[node name="PlayerRunes" parent="." unique_id=1633574852 instance=ExtResource("4_p0pnd")]

[node name="PlayerInterrupts" parent="." unique_id=216238792 instance=ExtResource("7_ruoki")]

[node name="PlayerGadgets" parent="." unique_id=878448781 instance=ExtResource("8_flvq4")]

[node name="Area2D" type="Area2D" parent="." unique_id=2004006427]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1718450755]
shape = SubResource("RectangleShape2D_qj8m8")

[node name="Talents" type="Node2D" parent="." unique_id=1451807582]

[node name="ClassImage" type="Sprite2D" parent="." unique_id=1619673927]
texture_filter = 1
texture = ExtResource("4_xoway")

[node name="StatContainer" type="VBoxContainer" parent="." unique_id=537213826]
offset_left = 105.0
offset_top = -17.0
offset_right = 241.0
offset_bottom = 81.0

[node name="Panel" type="Panel" parent="StatContainer" unique_id=654921205]
show_behind_parent = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8k3g5")

[node name="HBoxContainer" type="HBoxContainer" parent="StatContainer/Panel" unique_id=298340670]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="StatContainer/Panel/HBoxContainer" unique_id=143730331]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Atk:"
vertical_alignment = 1

[node name="AttackLabel" type="Label" parent="StatContainer/Panel/HBoxContainer" unique_id=868148876]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="StatContainer" unique_id=2128507839]
show_behind_parent = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8k3g5")

[node name="HBoxContainer" type="HBoxContainer" parent="StatContainer/Panel2" unique_id=1904541367]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="StatContainer/Panel2/HBoxContainer" unique_id=466734244]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Def:"
vertical_alignment = 1

[node name="DefenseLabel" type="Label" parent="StatContainer/Panel2/HBoxContainer" unique_id=858859313]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Panel3" type="Panel" parent="StatContainer" unique_id=150755311]
show_behind_parent = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8k3g5")

[node name="HBoxContainer" type="HBoxContainer" parent="StatContainer/Panel3" unique_id=2127689983]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="StatContainer/Panel3/HBoxContainer" unique_id=2081848856]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Armor:"
vertical_alignment = 1

[node name="ArmorLabel" type="Label" parent="StatContainer/Panel3/HBoxContainer" unique_id=1663483486]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="RageBar" type="TextureProgressBar" parent="." unique_id=1965415107]
offset_left = 73.0
offset_top = -38.0
offset_right = 91.0
offset_bottom = 91.0
fill_mode = 3
texture_under = ExtResource("3_mcllw")
texture_progress = ExtResource("3_svegv")
texture_progress_offset = Vector2(2, 0)

[node name="PlayerHealthBar" type="TextureProgressBar" parent="." unique_id=374077712]
offset_left = -649.0
offset_top = 93.0
offset_right = 651.0
offset_bottom = 117.0
value = 100.0
texture_under = ExtResource("6_tlmij")
texture_over = ExtResource("7_d0ter")
texture_progress = ExtResource("6_i2nsu")

[node name="PlayerHealthLabel" type="Label" parent="PlayerHealthBar" unique_id=714978094]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -17.5
offset_right = 74.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "3000/3000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerStaggerBar" type="TextureProgressBar" parent="." unique_id=919374622]
offset_left = -649.0
offset_top = 117.0
offset_right = 651.0
offset_bottom = 141.0
texture_under = ExtResource("6_tlmij")
texture_over = ExtResource("7_d0ter")
texture_progress = ExtResource("15_6s682")

[node name="PlayerStaggerLabel" type="Label" parent="PlayerStaggerBar" unique_id=196728081]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -17.5
offset_right = 74.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "3000/3000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlockSymbol" type="Sprite2D" parent="." unique_id=254393485]
visible = false
position = Vector2(85, -78)
texture = ExtResource("9_vfrul")

[node name="Label" type="Label" parent="BlockSymbol" unique_id=269586928]
offset_left = -11.0
offset_top = -30.0
offset_right = 69.0
offset_bottom = -14.0

[node name="StunIndicator" type="Panel" parent="." unique_id=1649902480]
visible = false
offset_left = -73.0
offset_top = -90.0
offset_right = 72.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pttw3")

[node name="Label" type="Label" parent="StunIndicator" unique_id=1111960050]
layout_mode = 0
offset_left = 65.0
offset_top = 83.0
offset_right = 81.0
offset_bottom = 99.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "1
"

[node name="ItemsUI" parent="." unique_id=45935826 instance=ExtResource("14_wm4uu")]

[node name="Line2D" type="Line2D" parent="." unique_id=18769613]
position = Vector2(-218, -113)
